alignment correction

--- a/style.css
+++ b/style.css
@@ -92,7 +92,8 @@ p {
   width: 378px;
   padding: 13px;
   border-radius: 20px;
-  margin: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-size: 13px;
   border: none;
 }
@@ -106,7 +107,7 @@ p {
   color: #fff;
   font-size: 13px;
   font-weight: 500;
-  transform: translateX(-130%);
+  transform: translateX(-118%);
   padding: 4px 10px;
   border: none;
   border-radius: 20px;
@@ -115,7 +116,7 @@ p {
 .hero #newsletter #links p {
   font-weight: 700;
   font-size: 20px;
-  margin-top: -30px;
+  margin-top: -45px;
 }
 
 .hero #newsletter #links ul li {
